--- a/ContentPacker/ContentPacker.vcxproj.filters
+++ b/ContentPacker/ContentPacker.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\MaterialProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AssetIdGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MeshProcessor.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\MaterialProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\AssetIdGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
