--- a/ContentPacker/ContentPacker.vcxproj.filters
+++ b/ContentPacker/ContentPacker.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\AssetIdGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\MetaProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MeshProcessor.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\AssetIdGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\MetaProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
