--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -305,6 +305,9 @@
     <ClInclude Include="renderer\dx11\DX11Techniques.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="core\SolarIntrospection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders\unlit.vert.hlsl" />
