--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -197,9 +197,6 @@
     <ClInclude Include="core\SolarCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="core\SolarArray.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="vendor\imgui_node\imnodes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -207,9 +204,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="platform\win32\Win32Socket.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="core\SolarQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="platform\win32\Win32Window.h">
@@ -222,9 +216,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="renderer\dx11\DX11Header.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="core\SolarHashMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="core\SolarAssets.h">
@@ -306,6 +297,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="core\SolarIntrospection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="core\SolarDataStructures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
