--- a/SolarOmen/SolarOmen.vcxproj.filters
+++ b/SolarOmen/SolarOmen.vcxproj.filters
@@ -81,9 +81,6 @@
     <ClCompile Include="core\SolarDebug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="serialization\RawModelImporter.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="serialization\RawTextureImporter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -224,9 +221,6 @@
     <ClInclude Include="core\SolarDebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="serialization\RawModelImporter.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="serialization\RawTextureImporter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -299,7 +293,7 @@
     <ClInclude Include="core\SolarIntrospection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="core\SolarDataStructures.h">
+    <ClInclude Include="core\SolarContainers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
