--- a/ContentPacker/ContentPacker.vcxproj.filters
+++ b/ContentPacker/ContentPacker.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\MetaProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\TextureProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MeshProcessor.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\MetaProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TextureProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
