--- a/ContentPacker/ContentPacker.vcxproj.filters
+++ b/ContentPacker/ContentPacker.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\TextureProcessor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ProgramProcessor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\MeshProcessor.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\TextureProcessor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ProgramProcessor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
