--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -13,19 +13,19 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6eb7d504-c001-41a7-a577-48c8b947a689}</ProjectGuid>
-    <RootNamespace>ContentPacker</RootNamespace>
+    <ProjectGuid>{2d596273-80d9-4d43-aa70-7bd944cca428}</ProjectGuid>
+    <RootNamespace>Engine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -45,26 +45,27 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>..\bin-int\ContentPacker\$(Platform)\$(Configuration)\</IntDir>
+    <IntDir>..\bin-int\Engine\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>..\bin-int\ContentPacker\$(Platform)\$(Configuration)\</IntDir>
+    <IntDir>..\bin-int\Engine\$(Platform)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;SOL_EXPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)ContentTools\src;$(SolutionDir)SolarOmen\;$(SolutionDir)SolarOmen\vendor\assimp\include;$(SolutionDir)SolarOmen\vendor\freetype\include;$(SolutionDir)Engine\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <ExceptionHandling>Sync</ExceptionHandling>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <TreatWarningAsError>true</TreatWarningAsError>
+      <AdditionalIncludeDirectories>$(SolutionDir)Engine\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)SolarOmen\vendor\assimp\lib\;$(SolutionDir)SolarOmen\vendor\irrklang\lib\;$(SolutionDir)SolarOmen\vendor\freetype\lib\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>irrKlang.lib;assimp.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -73,48 +74,38 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;SOL_EXPORT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)ContentTools\src;$(SolutionDir)SolarOmen\;$(SolutionDir)SolarOmen\vendor\assimp\include;$(SolutionDir)SolarOmen\vendor\freetype\include;$(SolutionDir)Engine\</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <ExceptionHandling>Sync</ExceptionHandling>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <TreatWarningAsError>true</TreatWarningAsError>
+      <AdditionalIncludeDirectories>$(SolutionDir)Engine\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)SolarOmen\vendor\assimp\lib\;$(SolutionDir)SolarOmen\vendor\irrklang\lib\;$(SolutionDir)SolarOmen\vendor\freetype\lib\;</AdditionalLibraryDirectories>
-      <AdditionalDependencies>irrKlang.lib;assimp.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\AssetIdGenerator.cpp" />
-    <ClCompile Include="src\BinaryFile.cpp" />
-    <ClCompile Include="src\FileProcessor.cpp" />
-    <ClCompile Include="src\Main.cpp" />
-    <ClCompile Include="src\MaterialProcessor.cpp" />
-    <ClCompile Include="src\MeshProcessor.cpp" />
-    <ClCompile Include="src\MetaProcessor.cpp" />
-    <ClCompile Include="src\ProgramProcessor.cpp" />
-    <ClCompile Include="src\TextFile.cpp" />
-    <ClCompile Include="src\TextureProcessor.cpp" />
+    <ClInclude Include="src\core\SolarApplication.h" />
+    <ClInclude Include="src\platform\SolarPlatform.h" />
+    <ClInclude Include="src\SolarDefines.h" />
+    <ClInclude Include="SolarEngine.h" />
+    <ClInclude Include="src\SolarEntry.h" />
+    <ClInclude Include="src\SolarGameTypes.h" />
+    <ClInclude Include="src\core\SolarLogging.h" />
+    <ClInclude Include="src\core\SolarMemory.h" />
+    <ClInclude Include="src\core\SolarString.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AssetIdGenerator.h" />
-    <ClInclude Include="src\BinaryFile.h" />
-    <ClInclude Include="src\Core.h" />
-    <ClInclude Include="src\FileProcessor.h" />
-    <ClInclude Include="src\MaterialProcessor.h" />
-    <ClInclude Include="src\MeshProcessor.h" />
-    <ClInclude Include="src\MetaProcessor.h" />
-    <ClInclude Include="src\ProgramProcessor.h" />
-    <ClInclude Include="src\TextFile.h" />
-    <ClInclude Include="src\TextureProcessor.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Engine\Engine.vcxproj">
-      <Project>{2d596273-80d9-4d43-aa70-7bd944cca428}</Project>
-    </ProjectReference>
+    <ClCompile Include="src\core\SolarApplication.cpp" />
+    <ClCompile Include="src\core\SolarLogging.cpp" />
+    <ClCompile Include="src\core\SolarMemory.cpp" />
+    <ClCompile Include="src\core\SolarString.cpp" />
+    <ClCompile Include="src\platform\win32\Win32Platform.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
