--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="src\core\SolarClock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\core\SolarEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\SolarString.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\core\SolarClock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\SolarEvent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
