--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -125,9 +125,11 @@
     <ClCompile Include="src\core\SolarMemory.cpp" />
     <ClCompile Include="src\core\SolarString.cpp" />
     <ClCompile Include="src\platform\win32\Win32Platform.cpp" />
+    <ClCompile Include="src\renderer\dx11\DX11Program.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11Renderer.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11RenderCommands.cpp" />
     <ClCompile Include="src\renderer\dx11\DX11StaticMesh.cpp" />
+    <ClCompile Include="src\resources\SolarResources.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
