--- a/Editor/Editor.vcxproj
+++ b/Editor/Editor.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="vendor\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\EditorTypes.h" />
     <ClInclude Include="src\ImGuiLayer.h" />
     <ClInclude Include="vendor\imgui\imconfig.h" />
     <ClInclude Include="vendor\imgui\imgui.h" />
